# swa

./: .gitignore  README.md  jiaozhun.code-workspace
swa/: .env.example  .gitignore  README.md  main.py  pyproject.toml
swa/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
swa/dataold/: two_stage_model.json
swa/scripts/: 01_check_db.py  analyze_errors.py  analyze_features.py  analyze_phase.py  analyze_voltage_dist.py  analyze_voltage_distribution.py  batch_evaluate_traditional.py  check_db.py  check_env.py  check_phase.py  check_prediction.py  check_temp_humid_dist.py  check_unknow.py  check_unknow2.py  debug_predict.py  evaluate_by_voltage.py  experiment_harmonics.py  experiment_lenet_fft.py  export_data.py  fix_unknow.py  pca_analysis.py  plot_voltage_dist.py  predict_all.py  simple_tolerance_strategy.py  train_model.py  verify_predict.py
swa/scriptsold/: analyze_prediction_errors.py  analyze_voltage_distribution.py  check_averaging.py  check_feat_bug.py  check_fields.py  check_len.py  check_phys_per_voltage.py  check_phys_vs_env.py  check_stability.py  check_stability_merged.py  check_tree_predictions.py  check_u_env.py  compare_feature_sets.py  debug_predict2.py  dense_baseline.py  evaluate_by_voltage.py  experiment_harmonics.py  merge_waveforms.py  physical_model.py  plot_drift_curves.py  plot_env_vs_pred.py  plot_temp_vs_pred.py  plot_voltage_dist.py  predict_all.py  simple_analyze.py  test_invert.py  train_dl.py  train_model.py  two_stage_model.py
swa/test/: _final_result.py  a1_97v_envelope.py  a1_97v_fitted_v2.py  (+15 more)
(+118 files in other folders)
