[project]
name = "swa"
version = "0.1.0"
description = "Sine Wave Analysis — 非侵入式出口硬压板状态检测"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scipy>=1.17.1",
    "dmpython>=2.5.32; sys_platform != 'darwin'",
    "xgboost>=3.0.0",
    "lightgbm>=4.6.0",
    "scikit-learn>=1.7.0",
    "torch>=2.6.0",
    "typing_extensions>=4.13.0",
]

[tool.setuptools.packages.find]
where = ["src"]
